cmake_minimum_required (VERSION 2.8)
project (myopencv)
find_package(OpenCV REQUIRED)
include_directories("/usr/local/include")
file(GLOB SOURCES "./*.cpp")
add_library(myopencv SHARED ${SOURCES})
target_link_libraries (	myopencv ${OpenCV_LIBS} "/usr/local/natinst/lib/libqwaveopencv.so")
INSTALL(TARGETS myopencv DESTINATION "/usr/local/natinst/lib")
